[metadata]
name = tskvlog
version = 0.0.1

[options]
packages = find:

[options.entry_points]
console_scripts =
  tskv_cut = tskvlog.console_scripts.tskv_cut:main
  tskv_time_tail = tskvlog.console_scripts.tskv_time_tail:main

[options.extras_require]
test =
    black
    pylint
    flake8
    flake8-import-order
    mypy
    types-setuptools


# How to make PyCharm and mypy to work with editable installation:
# export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
# https://github.com/python/mypy/issues/13392